--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "axios": "^0.21.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-axios": "^0.17.1",
+    "react-native-base64": "^0.2.1",
     "react-native-countdown-circle-timer": "^2.3.11",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-modal": "^11.6.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
+    "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
